--- a/templates/partial/nav.html
+++ b/templates/partial/nav.html
@@ -1,14 +1,16 @@
-<nav class="navbar navbar-expand-lg navbar-light" id='navbg'>
+<nav class="navbar navbar-expand-lg navbar-light fixed-top" id='navbg'>
   <div class="container-fluid">
     <img src="media/gmsa).jpeg" alt="" width="50" height="50" class="d-inline-block align-text-top" id='navimg'>
-    <a class="navbar-brand text-white ml-2" href="#">GMSA</a>
+    <a class="navbar-brand text-white ml-2" href="#" id = 'postid'>GMSA</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-      <div class="navbar-nav">
-        <a class="nav-link active text-white" aria-current="page" href="{% url 'index' %}">Home</a>
-        <a class="nav-link text-white" href="#">About</a>
+      <div class="navbar-nav log">
+        <a class="nav-link active text-white" aria-current="page" href="{% url 'index' %}" id = 'postid'>Home</a>
+        {% if request.user.is_authenticated %}
+        <a class="nav-link text-white log14" href="{% url 'logout' %}" id = 'postid'>logout</a>
+        {% endif %}     
       </div>
     </div>
   </div>
